[tool.poetry]
name = "repl_python3_lesson10-geocoding-a5719090"
version = "0.1.0"
description = ""
authors = ["a5719090 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.9.0"
pandas = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
